--- a/index.css
+++ b/index.css
@@ -57,11 +57,11 @@ img {
   padding-left: 35px;
 }
 
-#red {
+.red {
   color: lightcoral;
 }
 
-#blue {
+.blue {
   color: deepskyblue;
 }
 
@@ -70,4 +70,18 @@ img {
   border: 10px solid white;
   border-radius: 10px;
   background-color: white;
+}
+
+#my-info {
+  padding-left: 10px;
+}
+
+#enjoy {
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  border: 10px solid white;
+  border-radius: 10px;
+  background-color: white;
+  text-align: center;
+  font-size: 50px;
 }
