--- a/korea_second.css
+++ b/korea_second.css
@@ -120,7 +120,31 @@ h3 {
 }
 
 #text-four {
+  margin-block-start: 0.25em;
+  margin-block-end: 0.25em;
   text-align: center;
   font-size: 40px;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: relative;
+}
+
+footer p {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid white;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+}
+
+footer p a {
+  text-decoration: none;
 }
