--- a/korea_second.css
+++ b/korea_second.css
@@ -112,6 +112,7 @@ h3 {
 
 #text-three {
   background-color: lightgray;
+  padding-top: 20px;
   padding-left: 20px;
   padding-right: 15px;
   margin-left: 10px;
